Updates na API
acrescentei uma nova rota no swagger e programei o login e logout
