# Atividade em Python/Site ecommerce/app.py
@@ -2,14 +2,19 @@
 from flask import Flask, request, jsonify
 from flask_sqlalchemy import SQLAlchemy
 from flask_cors import CORS
-
+from flask_login import UserMixin,login_user, LoginManager,login_required,logout_user
 
 #instancia o Flask
 app = Flask(__name__)
 #configura o banco de dados
 app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///ecommerce.db'
+#configura o chave secreta do LoginManager
+app.config['SECRET_KEY'] = '123456789'
 
 db = SQLAlchemy(app)
+login_manager = LoginManager()
+login_manager.init_app(app)
+login_manager.login_view = 'login'
 CORS(app)
 # Modelagem
 
@@ -20,7 +25,44 @@ class Product(db.Model):
     price = db.Column(db.Float, nullable=False)
     description = db.Column(db.Text, nullable=True)
 
-@app.route('/api/products/add', methods=["POST"])     # Na criação das rotas também adicionamos os métodos
+class User(db.Model, UserMixin):
+    id = db.Column(db.Integer, primary_key=True)
+    username = db.Column(db.String(80), nullable=False, unique=True)
+    email = db.Column(db.String(200), nullable=False, unique= True)
+    password = db.Column(db.String(80), nullable=False)
+
+#Autenticacao
+@login_manager.user_loader
+def load_user(user_id):
+    return User.query.get(int(user_id))
+
+@app.route('/api/user/create', methods=['POST'])
+def add_user():
+    data = request.json
+    if 'username' in data and 'email' in data and 'password' in data:
+        user = User(username=data['username'], email=data['email'], password=data['password'])
+        db.session.add(user)
+        db.session.commit()
+        return jsonify({'message': 'User created successfully'})
+    return jsonify({'message': 'User invalid data'}), 400
+
+@app.route('/login', methods=['POST'])
+def login():
+    data = request.json
+    user = User.query.filter_by(username=data.get('username')).first()
+    if user and data.get('password') == user.password:
+        login_user(user)
+        return jsonify({'message': 'Logged in successfully'})
+    return jsonify({'message': 'Unauthorized. Invalid credentials'}),401
+
+@app.route('/logout', methods=['POST'])
+@login_required
+def logout():
+    logout_user()
+    return jsonify({'message': 'logout successfully'})
+
+@app.route('/api/products/add', methods=["POST"])
+@login_required     # Na criação das rotas também adicionamos os métodos
 def add_product():
     data = request.json    # request é importado do flask
     if 'name' in data and 'price' in data:
@@ -31,6 +73,7 @@ def add_product():
     return jsonify({"message": "Invalid product data"}), 400  #jsonify() - retorna um json e o 400 mostra que deu erro
 
 @app.route(f'/api/products/delete/<int:product_id>', methods=["DELETE"])
+@login_required
 def delete_product(product_id):
     product =Product.query.get(product_id)
     if product:
@@ -53,6 +96,7 @@ def get_prudoct_details(product_id):
     return jsonify({'message': 'Not found, product not available' }), 404
 
 @app.route('/api/products/update/<int:product_id>', methods=['PUT'])
+@login_required
 def update_product(product_id):
     data = request.json
     if 'name' in data or 'price' in data or 'description' in data:
